# ontology-registry

./: Cargo.toml  README.md
.github/workflows/: ci.yml  crates_io_publish.yml  release.yaml.yml
src/: dataclasses.rs  enums.rs  error.rs  lib.rs  ontology_metadata.rs  registry_key.rs  traits.rs
src/blocking/: bio_bank_metadata_provider.rs  bio_registry_metadata_provider.rs  file_system_ontology_registry.rs  mod.rs  obolib_metadata_json.rs  obolib_metadata_provider.rs  obolib_ontology_provider.rs
tests/: test_integration.rs
