[package]
authors = ["Rouven Reuter", "Patrick Simon Nairne"]
description = "Crate that lets you download, store and register ontologies"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "ontology-registry"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
mockito = "1.7.1"
tempfile = "3.23.0"

